--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,9 +6,10 @@
         xmlns:local="clr-namespace:Wpf_Rassokhin_PR1"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid Margin="-561,-142,-665,0" Height="702" VerticalAlignment="Top">
+    <Grid>
+        
 
-        <Button x:Name="Btn1" Height="50" Width="200" Content="Обычная кнопка" Margin="890,301,936,351" Click="Button_Click">
+        <Button x:Name="Btn1" Height="50" Width="200" Content="Обычная кнопка" Click="Button_Click">
             <Button.Background>
                 <LinearGradientBrush>
                     <LinearGradientBrush.GradientStops>
@@ -18,11 +19,12 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Canvas Margin="558,148,0,0">
+        <Canvas>
             <Button x:Name="Win1" Canvas.Left="10" Canvas.Top="10" Height="50" Width="100" Content="Win1" Click="Win1_Click"></Button>
             <Button x:Name="Win2" Canvas.Left="150" Canvas.Top="10" Height="50" Width="100" Content="Win2" Click="Win2_Click"></Button>
             <Button x:Name="Win3" Canvas.Left="280" Canvas.Top="10" Height="50" Width="100" Content="Win3" Click="Win3_Click"></Button>
             <Button x:Name="Win4" Canvas.Left="400" Canvas.Top="10" Height="50" Width="100" Content="Win4" Click="Win4_Click"></Button>
+            <Button x:Name="Win5" Canvas.Left="520" Canvas.Top="10" Height="50" Width="100" Content="Win5" Click="Win5_Click"></Button>
         </Canvas>
 
     </Grid>
